--- a/F-lab 멘토링/251106-메모리_구조_힙.md
+++ b/F-lab 멘토링/251106-메모리_구조_힙.md
@@ -101,7 +101,7 @@
 
 ### 구조적 세분화
 
-- HotSpotn VM에서는 힙을 세대 단위로 나누며, 이를 Generational Garbage Collection이라고 부른다
+- HotSpot VM에서는 힙을 세대 단위로 나누며, 이를 Generational Garbage Collection이라고 부른다
 
 ```
     - Heap
@@ -115,7 +115,7 @@
 
 #### Young Generation
 - 역할
-    - 새로 생서된 객체의 대부분이 위치
+    - 새로 생성된 객체의 대부분이 위치
 - 구성
     - Eden Space
         - 새로 생성된 객체가 최초로 할당되는 연역
@@ -193,6 +193,35 @@
         - System.gc(), Old GC 실패, Metaspace 부족 등
     - 특징
         - 가장 비용이 크며 STW 시간이 길다
+
+### Stop The World (STW)
+
+- JVM이 모든 애플리케이션 스레드의 실행을 완전히 멈추고, GC나 JIT 등 JVM 내부 작업만 수행하는 상태
+- GC는 객체 참조 관계를 따라가며 어떤 객체가 살아있고, 어떤 객체를 버려도 되는지를 분석한다
+- 이때 프로그램이 돌아가는 중이라면 객체 참조가 변할 수 있기 때문에 safe point를 만들어서 모든 스레드를 중단시킨 후 메모리를 정리한다
+- 아무때나 멈추는건 아니고 JVM이 코드 중간중간에 safe point를 삽입해두고, STW를 발생할 때 각 스레드는 safe point에 도달할 때까지 실행하고 거기서 멈춘다
+- 즉, STW는 모든 스레드가 safe point에 도달해서 안전하게 정지된 상태이다
+
+### STW가 일어나는 주요 상황
+
+| 구분 | 설명 |
+| --- | --- |
+| **Minor GC** | Young Generation 수집 시 잠깐 STW 발생 |
+| **Major / Full GC** | Old Generation 수집 시 상대적으로 긴 STW |
+| **JIT Compilation** | 메서드를 컴파일할 때도 STW 구간이 짧게 발생 |
+| **Class Loading** | 새 클래스를 로드하고 초기화할 때 |
+| **Deoptimization** | JIT 최적화가 깨져 다시 인터프리터로 돌아갈 때 |
+| **Thread Dump, Heap Dump** | 사람이 수동으로 `jstack`, `jmap` 등을 찍을 때도 STW 발생 |
+
+### STW 최소화를 위한 접근들
+
+| 방법 | 설명 |
+| --- | --- |
+| **G1 GC** | 영역 기반 GC로 pause를 짧게 나눔 |
+| **ZGC / Shenandoah** | 대부분의 GC 작업을 애플리케이션 스레드와 동시에 수행 |
+| **Heap 크기 튜닝** | 지나치게 작은 힙은 잦은 GC로 STW 빈도 증가 |
+| **객체 재사용** | 단명 객체 생성 억제로 Young GC 빈도 감소 |
+| **오프힙 메모리 사용** | GC 관리 밖에 있는 DirectBuffer 등 활용 |
 
 ### 내부 최적화 개념
 
