251112 메모리구조 정리 업데이트

--- a/F-lab 멘토링/251111-메모리_구조_스택.md
+++ b/F-lab 멘토링/251111-메모리_구조_스택.md
@@ -5,7 +5,7 @@
 ### 스택이란?
 
 - 메서드가 실행될 때마다 임시로 필요한 메모리 공간을 제공하는 영역
-- 힙은 new로 만들고 GC가 정리하지만, 스택은 자동으로 관리되어 메서드가 끝나느 순간 그 안의 모든 변수가 사라진다
+- 힙은 new로 만들고 GC가 정리하지만, 스택은 자동으로 관리되어 메서드가 끝나는 순간 그 안의 모든 변수가 사라진다
 
 ### 스택에 저장되는 것
 
