--- a/F-lab 멘토링/251111-메모리_구조_정리.md
+++ b/F-lab 멘토링/251111-메모리_구조_정리.md
@@ -270,3 +270,100 @@
 
 한 줄 정리
 - JIT 컴파일 되어도 JVM 은 바이트코드와 네이티브 코드의 주소 매핑 정보를 유지합니다. 따라서 실제 실행은 CPU의 물리적 PC Register가 담당하지만, JVM은 내부 테이블을 통해 논리적 바이트코드 PC를 추적할 수 있다
+
+---
+
+## Runtime Constant Pool
+
+### “Runtime Constant Pool은 어떤 역할을 하는 영역인가요? 그리고 Class 파일의 Constant Pool과는 어떤 차이가 있나요?”
+
+나의 답변
+- RCP는 클래스나 인터페이스마다 클래스 로딩 시 Metaspace에 만들어지는 상수 테이블입니다. Class 파일 로딩 시점의 정적 Constant Pool이 JVM 실행 중에는 RCP로 변환되어 참조, 리터럴, 심볼 정보 드을 저장합니다
+
+보완 요소
+- RCP는 각 클래스나 인터페이스가 JVM에 로드될 때, 그 클래스의 Constant Pool 테이블을 메모리상에 올려놓은 구조입니다
+- 쉽게 말하면 클래스 파일에 있던 상수, 참조 정보들을 JVM이 실제로 사용할 수 있도록 변환한 버전입니다
+- 저장되는 항목
+
+| 구분                            | 예시                            | 설명                                 |
+| ----------------------------- | ----------------------------- | ---------------------------------- |
+| 리터럴 값(Literal)           | `"Hello"`, `3.14`, `100`      | 컴파일 시 결정된 상수 값                     |
+| 심볼릭 참조(Symblic Reference) | 클래스 이름, 메서드 이름, 필드 이름 등       | 실제 메모리 주소로 변환되기 전의 논리적 참조          |
+| final 상수                  | `static final int VALUE = 10` | 상수로 컴파일된 값                         |
+| 메서드/필드 참조 정보              | `invokevirtual`, `getfield` 등 | 실행 시 실제 메서드/필드 주소로 해석됨             |
+| String literal 상수         | `"abc"`                       | intern() 시 String Pool에 저장 후 참조 유지 |
+
+- 메모리 위치는 자바 7 이전엔 PermGen, 자바 8 이후론 Metaspace 내부의 RCP에 저장
+- "Hello" 같은 문자열 리터럴은 RCP에 기존 문아ㅕㄹ이 있는지 확인 후, 없으면 Heap의 String Pool에 저장된다
+- 이후 같은 문자열 리터럴은 String Pool의 참조를 재사용한다
+- RCP는 리터럴을 참조하는 위치, String Pool은 리터럴의 실제 객체
+
+한 줄 정리
+- RCP는 클래스 로딩 시 Metaspace에 생성되는 상수 테이블로, 클래스 파일의 Constant Pool을 런타임에서 사용할 수 있도록 해석한 구조입니다
+
+### “`"abc"` 같은 문자열 리터럴은 RCP와 Heap 중 어디에 저장되나요? 그리고 `new String("abc")` 로 생성한 문자열과는 어떤 차이가 있나요?”
+
+나의 답변
+- 리터럴은 RCP에 올라가지만 실제 객체는 Heap의 String Pool에 저장됩니다. new를 사용해 생성한 문자열은 항상 새로운 객체를 생성하기 때문에 같은 Heap에 있지만 String Pool에 저장되지 않습니다
+
+보완 요소
+- 리터럴은 클래스 로딩 시점에 RCP에 등록되며, JVM은 리터럴이 String Pool에 있는지 확인한다
+- 없으면 새로 생성하여 String Pool에 저장하고, RCP는 그 참조를 보유한다
+- 다음에 같은 문자열의 리터럴이 등장하면 RCP는 기존 String Pool의 참조를 재사용한다
+
+### “String.intern() 메서드는 어떤 역할을 하나요? 그리고 이 메서드를 과도하게 사용하면 오히려 성능 문제가 생길 수 있는 이유는 무엇인가요?”
+
+나의 답변
+- intern() 메서드는 문자열을 String Pool에 등록해주는 역할을 합니다.
+
+보완 요소
+- 중복 문자열이 매우 많을 때 메모리 절약이 가능해 유용하다
+- 남용시 위험요소
+    - String Pool 공간은 무한하지 않다
+    - intern() 호출 자체가 비용이 든다
+        - JVM은 intern() 시 동기화된 전역 테이블 검색을 수행해야 한다
+    - 문자열 관리가 GC Root를 통해 계속 유지된다
+        - 한 번 intern() 된 문자열을 GC에서 쉽게 해제되지 않는다
+            - 불필요한 문자열까지 Pool에 남으면 메모리 누수처럼 작동한다
+
+한 줄 정리
+- intern()은 문자열을 String Pool에 등록해 중복을 제거하지만, 너무 많이 사용하면 Pool 메모리 포화와 락 경합으로 오히려 성능이 저하될 수 있다
+
+---
+
+## Code Cache
+
+### “Code Cache는 어떤 역할을 하는 영역인가요? 그리고 JIT 컴파일과 어떤 관계가 있나요?”
+
+나의 답변
+- Code Cache는 JIT가 자주 사용되는 메서드의 자바 바이트코드를 네이티브 코드로 바꿔 저장하는 메모리 영역입니다.
+
+보완 요소
+- Code Cache는 JIT 컴파일 결과의 저장소이며, 컴파일 된 메서드는 다음부터 인터프리터가 아닌 Code Cache에 저장된 네이티브 코드를 직접 실행한다
+- HotSpot JVM에서는 Code Cache가 세 가지 영역으로 분리된다
+    1. Non-profiled code : 단순 JIT 컴파일된 코드
+    2. Profiled code : 최적화된 C2 컴파일 결과
+    3. Non-method code : JVM 내부용 코드
+
+한 줄 정리
+- Code Cache는 JIT 컴파일을 통해 생성한 네이티브 코드를 저장하는 영역으로, 자주 실행되는 메서드를 캐싱해 실행 속도를 크게 향상시킵니다
+
+### “Code Cache가 가득 차면 JVM은 어떤 동작을 하나요? 그리고 왜 Code Cache의 크기를 무작정 늘린다고 해서 성능이 항상 좋아지는 것은 아닐까요?”
+
+나의 답변
+- Code Cache가 가득 차면 JIT 컴파일이 중단되어 인터프리터로 되돌아갑니다.
+
+보완 요소
+- 크기를 늘린다고 해서 성능이 항상 좋아지지 않는 이유
+    - 캐시 관리 오버헤드 증가
+        - Code Cache는 단순 저장 공간이 아니라 JIT가 관리하는 구조체이다
+        - 너무 크면 캐시 검색, 삭제, 관리 비용이 커져 성능 저하가 발생한다
+    - CPU의 Instruction Cache(I-Cache) 효율 저하
+        - Code Cache는 결국 CPU 명령어 캐시(I-Cache)에서 실행된다
+        - 너무 많은 네이티브 코드가 흩어지면 CPU가 코드 블록을 캐시에 유지하기 어렵게 되어, 실제 실행 속도가 느려진다
+            - 즉, JVM 레벨 캐시는 커도 CPU 캐시는 작다
+    - 메모리 사용량 증가 -> GC 및 OS 페이징 부담
+        - Code Cache는 Native Memory를 사용하는데, 너무 크게 잡으면 다른 네이티브 메모리 영역(Metaspace, Thread Stack 등)과 충돌하거나 전체 시스템 메모리를 압박할 수 있다
+
+한 줄 정리
+- Code Cache가 가득 차면 JIT가 중단되고 인터프리터 모드로 되돌아가 성능이 저하됩니다. 하지만 Code Cache를 과도하게 늘리면 CPU I-Cache 비효율과 메모리 낭비로 오히려 성능이 떨어질 수 있습니다
