--- a/F-lab 멘토링/251106-메모리_구조_힙.md
+++ b/F-lab 멘토링/251106-메모리_구조_힙.md
@@ -121,6 +121,9 @@
         - 새로 생성된 객체가 최초로 할당되는 연역
     - Survivor 0/1
         - Young GC 후 살아남은 객체가 복사되어 이동되는 영역
+        - Survivor 영역에는 특별한 규칙이 있는데, S0 또는 S1 둘 중 하나는 꼭 비어 있어야 하는 것이다
+            - 그 이유는 GC가 복사 방식으로 살아남은 객체를 이동시키기 때문이다
+            - 살아있는 객체만 복사해서 다른 곳으로 옮기고, 나머지는 한꺼번에 버린다
 - GC 과정 (Minor GC)
     - Eden에서 살아남은 객체를 Survivor로 복사
     - Survivor 간에는 copying collector 방식으로 교차 복사
