251114 ZGC 추가 업로드

--- a/F-lab 멘토링/251113-GC.md
+++ b/F-lab 멘토링/251113-GC.md
@@ -123,6 +123,70 @@
 | `-XX:+PrintGCDateStamps`   | 로그에 시간 표시            |
 | `-Xlog:gc*` (Java 9+)      | GC 로그 통합 출력 방식       |
 
+---
+
+## ZGC (Z Garbage Collector)
+
+### ZGC란?
+
+- ZGC는 초저지연을 목표로 설계된 64비트 전용 GC이다. 
+- 힙 크기나 live set 크기에 거의 무관하게 짧은 STW를 유지하고, Marking, Sweep, Compact까지 대부분을 애플리케이션과 동시로 수행한다.
+- 대형 힙에서도 STW 시간이 짧게 유지된다
+
+### 설계 포인트
+
+1. Colored Pointers
+    - 64비트 포인터의 상위 비트를 객체의 상태 메타데이터로 사용
+        - 예 : 'mark 완료 여부', 'remap 필요 여부'등 상태를 포인터에 직접 태깅
+        - 덕분에 객체/포인터의 상태를 빠르게 판정하고, 추가 메타테이블 조회 없이 동시 단계들을 구현
+2. Load Barrier
+    - 모든 객체 참조 로드 경로에 가벼운 배리어를 두어, 아직 옛 주소를 가리키는 포인터를 즉시 최신 위치로 갱신(remap)한다
+    - 마킹 중/ 이동 중에도 프로그램이 계속 실행될 수 있게 만든다
+3. Concurrent Relocation
+    - ZGC는 객체 이동(=압축) 자체를 동시로 처리한다
+        - 전통적 GC처럼 압축 = 긴 STW가 아니다
+        - 포인터는 로드 배리어를 통해 접근 시점에 점진적으로 최신 주소로 정정한다
+        - 결과적으로 파편화 없이 짧은 STW로 운영 가능하다
+4. Region/Page 기반 힙 관리 (ZPages)
+    - 힙을 여러 크기(소/중/대)의 페이지로 나눠 관리한다
+        - 수집/이동 단위를 잘게 쪼개어 작업을 분산한다
+        - 필요한 페이지만 회수, 이동, 언커밋(반납)히여 메모리 효율을 유지한다
+
+### 동작 단계
+
+- ZGC의 한 사이클은 다음과 같다
+- 1, 3 구간에서 수 ms 이하의 STW가 발생하고, 핵심 작업은 전부 동시 실행한다
+
+1. Root Mark 시작 (짧은 STW)
+    - 루트 세트(스레드 루트, 레지스터, 스택 등) 스냅샷을 잡고 바로 STW 해제
+2. Concurrent Mark
+    - 앱과 동시에 객체 그래프를 따라가며 살아있는 객체 마킹
+3. Remark/Relocate 준비 (짧은 STW)
+    - 마킹 중 변경된 참조 최종 반영, 이동할 후보 선정
+4. Concurrent Relocate (이동/압축)
+    - 선택된 페이지의 객체들을 새 위치로 동시에 이동
+    - 로드 배리어가 오래된 참조를 접근 시마다 최신 주소로 보정
+5. concurrent Remap/정리
+    - 남은 오래된 포인터를 점진 갱신, 메타데이터 정리
+    - 필요 없는 페이지는 언커밋(메모리 반납) 가능
+
+### 비용과 제약
+
+- 오버헤드
+    - 모든 참조 로드에 가벼운 배리어가 들어가므로 약간의 처리량(Throughput) 손실 가능
+- 64비트 전용
+    - 포인터 컬러링 때문이 사실상 64비트가 전제
+- 핀(pin)된 객체
+    - JNI 등으로 이동 불가 객체가 많으면 이동/압축 효율 저하
+
+### Generational ZGC (Java 21+)
+
+- 초기 ZGC는 비세대형이었지만, 최근엔 세대 분리(Young/Old)를 도입한 Generational ZGC가 제공된다
+- 젊은 객체만 더 자주 수집하여 배리어/마킹 부담을 낮추고 처리량을 개선
+- 저지연 특성을 유지하며 평균 처리량을 끌어올리는 방향
+
+---
+
 ## GC 알고리즘별 동작 방식 비교표
 
 | GC 이름 | 수집 대상 | 주요 단계 (동작 방식) | 병렬성 | 동시성 | 특징 요약 |
