--- a/알고리즘/프로그래머스_완전범죄.md
+++ b/알고리즘/프로그래머스_완전범죄.md
@@ -1,2 +1,59 @@
 # 완전 범죄
 
+https://school.programmers.co.kr/learn/courses/30/lessons/389480
+
+## 알고리즘
+
+- 이 문제는 dp를 사용해 해결했다
+- A와 B의 누적 흔적 개수를 어떻게 저장할지가 포인트였다
+- A의 누적 흔적 개수는 `dp[i][j]`에 저장하고, B의 누적 흔적 개수는 `j`를 사용한다
+- 여기서 `i`는 `i`번째 물건을 의미한다
+
+- 점화식
+    - A가 물건 i를 훔칠 때 `dp[i][j] = Math.min(dp[i][j], 이전까지 A의 누적 흔적 개수 + 물건 i를 A가 훔칠 때 생기는 흔적의 개수)`
+    - B가 물건 i를 훔칠 때 `dp[i][j + 물건 i를 B가 훔칠 때 생기는 흔적의 개수] = 이전까지 A의 누적 흔적 개수`
+
+- 전체 코드
+
+```java
+import java.util.Arrays;
+
+class Solution {
+    public int solution(int[][] info, int n, int m) {
+        int[][] dp = new int[info.length + 1][m];
+        int inf = 121; //n, m의 최댓값은 120이므로 그보다 큰 121로 설정
+        
+        for(int i = 0; i < dp.length; i++) {
+            Arrays.fill(dp[i], inf); // dp를 inf(= 121)로 채워둠
+        }
+        
+        dp[0][0] = 0; //A, B 둘 다 어떤것도 훔치지 않은 상태
+        
+        for(int i = 1; i < dp.length; i++) {
+            for(int j = 0; j < m; j++) {
+                if(dp[i-1][j] == inf) continue;
+                int prevA = dp[i-1][j]; //이전까지 A의 누적 흔적 개수
+                
+                int nextA = prevA + info[i-1][0]; //A가 물건 i를 훔쳤을때 총 누적 흔적 개수
+                if(nextA < n) {
+                    dp[i][j] = Math.min(dp[i][j], nextA);
+                }
+                
+                int nextB = j + info[i-1][1]; //B가 물건 i를 훔쳤을때 총 누적 흔적 개수를 배열의 인덱스로 사용
+                if(nextB < m) {
+                    dp[i][nextB] = Math.min(dp[i][j], prevA);
+                }
+            }
+        }
+        
+        int answer = inf;
+        for(int i = 0; i < m; i++) {
+            answer = Math.min(answer, dp[dp.length - 1][i]); //마지막 행이 곧 물건을 전부 훔쳤을때의 상태이므로 해당 행에서 가장 작은 값이 A의 최소 누적 흔적 개수이다
+        }
+        
+        if(answer == inf) answer = -1;
+        
+        return answer;
+    }
+}
+```
