251125 꼬리물기질문 추가 업로드

--- a/F-lab 멘토링/251121-롬복_동작_방식.md
+++ b/F-lab 멘토링/251121-롬복_동작_방식.md
@@ -10,6 +10,23 @@
     5. 수정된 AST 기준으로 `.class` 파일 생성
 - 오로지 컴파일할 때 소스/AST를 만져서 코드 생성만 한다
 
+## Lombok이 Javac 컴파일 과정 중 AST를 조작하는 시점
+
+- 롬복은 Javac의 어노테이션 프로세싱 단계만 사용하는 것이 아니다
+- Javac의 파싱 이후, 심볼 분석 이전/중간 단계에서 AST를 직접 수정한다
+    1. 소스 코드 파싱 -> AST 생성
+    2. 여기서 롬복이 AST를 가로채서 메소드 추가 <- 이 단계
+    3. 심볼 분석(attribute) : 추가된 메소드도 함께 타입 체킹
+    4. 바이트코드 생성(generate) : 수정된 AST 기반으로 .class 파일 생성
+- 파싱 전에 개입하면 소스 코드 문법이 아직 검증되지 않아 롬복이 작업할 수 있는 AST가 존재하지 않는다
+- 심볼 분석이 끝난 뒤에는 타입 체크가 끝나서 새로운 메소드를 추가할 수 없으며 .class 생성 단계로 넘어가 버린다
+- 롬복이 가능한 이유는, 롬복이 일반 어노테이션 프로세서가 아니라 Javac 내부 API를 직접 사용하여 Javac 컴파일러의 내부 AST를 변조하는 비공식적 트릭을 사용한다
+
+## 롬복이 Javac 내부 AST를 직접 조작한다면, 왜 빌드 도구에(Maven/Gradle)에서도 롬복 설정이 필요한가?
+
+- 롬복이 AST를 조작하려면 반드시 컴파일 단계에 Javac 안으로 끼어들어야 하는데, 그 통로가 어노테이션 프로세서이다
+- 롬복이 AST를 조작하는 능력은 Javac 컴파일 과정에서만 가능하며, 빌드 도구는 롬복을 Javac에 연결해주기 위해 어노테이션 프로세서로 등록해야 한다. 또한 런타임에는 롬복이 필요없으므로 complieOnly로만 포함한다
+
 ## IDE 플러그인이 필요한 이유
 
 - IDE는 내가 작성한 소스 파일 그대로를 보고 코드 분석을 한다
