--- a/F-lab 멘토링/251124-인터페이스.md
+++ b/F-lab 멘토링/251124-인터페이스.md
@@ -106,3 +106,13 @@ void order_결제호출_테스트() {
 ## 한 줄 정리
 
 인터페이스는 구현을 몰라도, 이렇게 쓸 수 있는 타입을 정의하는 규약이다. 이를 사용하는 이유는 구현을 갈아끼우기 쉽고 (확장성), 다형성을 활용해 코드를 깔끔하게 만들고 (유지보수성), 테스트/의존성 주입/디자인 패턴 등과 궁합이 좋기 때문이다 (유연성)
+
+## 꼬리물기
+
+### 자바 8 이후 인터페이스에 default 메서드와 static 메서드를 넣을 수 있게 되었는데, 왜 갑자기 인터페이스가 몸통(구현)을 가질 수 있게 되었을까?
+
+- 인터페이스에 default 메소드를 허용한 이유는, 자바 8에 새로운 기능(Stream, Collaction 유틸 등)을 도입하면서 기존의 수많은 인터페이스에 메소드를 추가해야 했기 때문이다. default 메소드는 기존 구현체들이 깨지지 않도록 하기 위한 해결책이다
+
+### 인터페이스에 default 메소드가 있는데도 추상 클래스가 필요한 이유는 무엇일까?
+
+- 추상 클래스는 상태를 가질 수 있지만, 인터페이스는 상태를 가질 수 없기 때문이다
