--- a/F-lab 멘토링/251124-제네릭.md
+++ b/F-lab 멘토링/251124-제네릭.md
@@ -222,3 +222,37 @@ public class Box<T> {
 }
 // 런타임 시점에 T가 뭔지 모르기 때문에 불가능하다
 ```
+
+## 꼬리물기 질문
+
+### 자바에서 제네릭을 사용하는 가장 근본적인 이유는 무엇일까?
+
+- 컴파일 시 타입을 체크할 수 있어서 타입 안정성이 보장되고, 캐스팅을 줄이며 런타임 시점의 ClassCastException을 방지할 수 있고, 코드의 재사용성이 좋아지기 때문이다
+
+### 타입 소거가 무엇이며 자바는 왜 런타임 제네릭을 선택하지 않고, 타입 소거 방식을 선택했는지 설명하라
+
+- 타입 소거란 컴파일 시 제네릭 타입 정보를 체크하고 컴파일된 바이트코드에서는 타입 정보가 삭제됨을 말한다. 자바가 타입 소거를 선택한 이유는 타입 안전성을 주면서도 기존 JVM을 변경하지 않고, 과거 자바 코드와 호환되도록 하기 위해서이다
+
+### 타입 소거 때문에 자바 제네릭에는 몇 가지 제약이 생기는데 다음이 왜 불가능한지 설명하라
+
+1. `new T()`
+    - 타입 소거 때문에, 생성자가 어떤 형태인지 알 수 없어 객체 생성이 불가능
+2. `new T[]`
+    - 자바 배열은 런타임에 실제 타입을 반드시 알고 있어야 하는(reified, 실체화된) 자료구조다
+    - 하지만 제네릭은 런타임에 지워지므로 배열 생성이 불가능
+3. `obj instanceof T` 불가능
+    - 런타임에 타입 정보가 사라지므로 비교할 실제 타입이 없어서 불가능
+4. `List<String>`과 `List<Integer>`의 런타임 타입이 동일
+    - JVM 바이트코드는 타입 소거 후 모두 List 형태로만 존재하므로, 런타임에는 동일한 타입으로 간주된다
+
+### 다음 두 선언의 차이를 설명하라 : `List<? extends Number>`, `List<? super Integer>`
+
+`List<? extends Number>`
+- 읽을 땐 최소한 Number인것이 보장되므로 안전
+- 쓸 땐 Integer, Long 중 어떤 리스트인지 모르므로 null 제외 쓰기 불가
+- PECS : `extends`는 Producer (꺼내는 용도)
+
+`List<? super Integer>`
+- 쓸 땐 Integer 또는 그 하위 타입을 넣는 것은 안전
+- 읽을 땐 리스트에 실제로 어떤 타입이 들어있는지 모르므로 Object로만 읽기 가능
+- PECS : `super`는 Consumer (넣는 용도)
