--- a/F-lab 멘토링/251121-롬복_동작_방식.md
+++ b/F-lab 멘토링/251121-롬복_동작_방식.md
@@ -3,7 +3,7 @@
 ## Annotation Processor
 
 - 롬복은 JSR-269 표준을 따르는 어노테이션 프로세서이다
-    1. `javac'(또는 Gradle/Maven 빌드) 실행
+    1. `javac`(또는 Gradle/Maven 빌드) 실행
     2. 컴파일러가 소스 코드를 파싱해서 AST(추상 구문 트리) 생성
     3. 이때 `@Getter`, `@Setter`, `@Builder` 같은 롬복 어노테이션을 발견
     4. 롬복의 어노테이션 프로세서가 AST를 조작해서 어노테이션에 해당하는 메소드/생성자 등 생성
@@ -22,7 +22,7 @@
 - 심볼 분석이 끝난 뒤에는 타입 체크가 끝나서 새로운 메소드를 추가할 수 없으며 .class 생성 단계로 넘어가 버린다
 - 롬복이 가능한 이유는, 롬복이 일반 어노테이션 프로세서가 아니라 Javac 내부 API를 직접 사용하여 Javac 컴파일러의 내부 AST를 변조하는 비공식적 트릭을 사용한다
 
-## 롬복이 Javac 내부 AST를 직접 조작한다면, 왜 빌드 도구에(Maven/Gradle)에서도 롬복 설정이 필요한가?
+## 롬복이 Javac 내부 AST를 직접 조작한다면, 왜 빌드 도구(Maven/Gradle)에서도 롬복 설정이 필요한가?
 
 - 롬복이 AST를 조작하려면 반드시 컴파일 단계에 Javac 안으로 끼어들어야 하는데, 그 통로가 어노테이션 프로세서이다
 - 롬복이 AST를 조작하는 능력은 Javac 컴파일 과정에서만 가능하며, 빌드 도구는 롬복을 Javac에 연결해주기 위해 어노테이션 프로세서로 등록해야 한다. 또한 런타임에는 롬복이 필요없으므로 complieOnly로만 포함한다
