251127 컬렉션 파트 설명 추가

--- a/자바의 신/251125-자바의신-22장.md
+++ b/자바의 신/251125-자바의신-22장.md
@@ -10,6 +10,7 @@
 ### ArrayList
 
 - 내부는 배열로 구현
+    - 동적 배열 : 초기 사이즈를 가진 배열을 하나 만들어 두고, 넘치면 더 큰 배열을 새로 만들어서 기존 배열을 새 배열로 복사해 옮김
 - 스레드에 안전하지 않음
 - 장점
     - index로 접근하는 `get`, `set`이 O(1)
@@ -21,9 +22,12 @@
 ### LinkedList
 
 - 내부는 양방향 연결 리스트
+    - 각 노드는 data, prev, next의 정보를 가지고 있음
+    - 처음과 끝 노드는 각각 prev, next가 null임
+    - 리스트는 head, tail의 포인터를 따로 가지고 있음
 - 스레드에 안전하지 않음
 - 장점
-    - 리스트 중간에서 삽입/삭제 연산이 노드 연결만 바꾸면 되니 이론적으로 유리하다
+    - 리스트 중간에서 삽입/삭제 연산이 노드 연결만 바꾸면 되니 이론적으로 유리하다 O(1)
 - 단점
     - 인덱스 접근 시 앞에서부터 차례로 따라가야해서 느림 O(n)
 
