251128 자바의신 25장 수정

--- a/자바의 신/251126-자바의신-25장.md
+++ b/자바의 신/251126-자바의신-25장.md
@@ -17,6 +17,32 @@
 - 스택 변수는 스레드끼리 안 섞임
 - 하지만 힙에 있는 객체는 모든 스레드가 동시에 건드릴 수 있어서 동기화 문제가 생김
 
+## JVM 메모리 구조와 엮어서 보는 스레드/프로세스
+
+- 프로세스(=JVM 전체) 수준에서 공유하는 영역
+    - Heap
+    - Metaspace
+    - Code Cache
+    - Direct Memory(Off-heap)
+- 스레드마다 따로 있는 영역
+    - Java Stack
+    - PC Register
+    - Native method Stack
+
+그래서
+
+1. 하나의 JVM 프로세스 안에 여러 스레드가 있을 때
+    - 모든 스레드는 같은 Heap / Metaspace를 본다
+        - 힙에 올라간 객체는 모든 스레드가 공유 가능
+        - 그래서 경쟁 조건, 동시성 문제가 발생
+    - 하지만 각 스레드는 자기만의 스택을 사용
+        - 이 스택 안에는 그 스레드의 지역 변수, 호출 스택만 있음
+        - 다른 스레드와 스택을 공유하지 않기 때문에, 지역 변수는 기본적으로 스레드 안전하다
+2. 프로세스 단위로 JVM이 여러 개 뜨면
+    - Heap / Metaspace 도 프로세스마다 완전히 분리
+    - 서로의 객체를 직접 볼 수 없음
+    - 서로의 객체를 보려면 프로세스 간 통신(소켓, 파일, DB, 메시지 큐 등)을 써야함
+
 ## 스레드 만드는 방법
 
 ### Thread 상속
