--- a/F-lab 멘토링/251223-HTTPS_핸드셰이크_과정.md
+++ b/F-lab 멘토링/251223-HTTPS_핸드셰이크_과정.md
@@ -2,7 +2,7 @@
 
 ## 1. 랜덤키 + 암호화 방식 서버에 전달 (Client Hello)
 
-클라이언트가 서베에 연결을 시도하며 인사를 건네는 과정
+클라이언트가 서버에 연결을 시도하며 인사를 건네는 과정
 
 - 브라우저는 서버에 Client Hello 메시지를 보낸다
 - 이때 자신이 지원 가능한 암호화 방식(Cipher Suite) 목록과 클라이언트 측에서 생성한 난수를 함께 전달한다
@@ -23,7 +23,7 @@
 
 - SSL (Secure Sockets Layer)
     - 1990년대 초 넷스케이프 사에서 처음 만들었으나, 보안 취약점이 발견되며 지금은 사용되지 않는 과거의 기술
-- TSL (Transport Layer Security)
+- TLS (Transport Layer Security)
     - SSL의 문제점을 보완해서 나온 후속 표준 기술
         - 오늘날 SSL 인증서라고 부르는 것들은 기술적으로 모두 TLS를 의미한다 (마치 포스트잇이 고유 명사처럼 쓰이는 것과 비슷함)
 - SSL/TLS의 핵심 3가지 역할
@@ -50,7 +50,7 @@
 CA가 신뢰를 보장하는 원리 : 계층적 신뢰 구조
 
 - 디지털 서명 (보증서 낙인 찍기)
-    - 서버가 CA에 인증을 요청하면, CA는 서버의 정보를 확인한 후 자신의 개인키로 해당 정보를 암호화하는데 이것이 디지텅 서명이다
+    - 서버가 CA에 인증을 요청하면, CA는 서버의 정보를 확인한 후 자신의 개인키로 해당 정보를 암호화하는데 이것이 디지털 서명이다
     - 모든 브라우저에는 CA의 공개키가 이미 들어있다. 브라우저는 이 공개키로 서버가 가져온 인증서를 복호화해본다
     - 만약 성공적으로 풀린다면 CA가 보증한 게 맞음을 확신한다
 - 신뢰의 사슬 (Chain of Trust)
@@ -80,7 +80,7 @@ CA가 신뢰를 보장하는 원리 : 계층적 신뢰 구조
 
 데이터를 암호화할 진짜 키를 만들기 위한 준비
 
-- 클라이언트는 다시 한번 새로운 임의의 난수인 Pre_Master Secret을 생성
+- 클라이언트는 다시 한번 새로운 임의의 난수인 Pre-Master Secret을 생성
 - 이전 단계에서 얻은 서버의 공개키로 이 값을 암호화하여 서버에 전송
 - 공개키로 암호화 했기 때문에 오직 서버의 개인키로만 풀 수 있어 중간에 탈취당해도 안전
 
